<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/action_notif">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_daily_reminder"
            android:summary="@string/daily_reminder_summary"
            android:title="@string/daily_reminder_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_upcoming_reminder"
            android:summary="@string/upcoming_reminder_summary"
            android:title="@string/upcoming_reminder_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme">
        <Preference
            android:key="@string/key_setting_locale"
            android:summary="@string/locale_summary"
            android:title="@string/locale_title" />
    </PreferenceCategory>
</PreferenceScreen>