<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <ImageView
            android:id="@+id/img_poster_movie_now"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/img_poster" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/img_poster_movie_now"
            android:layout_toRightOf="@id/img_poster_movie_now"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_item_title_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/title_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_rating_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_title_now"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/img_poster_movie_now"
                android:text="@string/rating"
                android:textSize="16sp" />

            <!--Popularity-->
            <TextView
                android:id="@+id/tv_item_popularity_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_rating_now"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/img_poster_movie_now"
                android:text="@string/Popularity"
                android:textColor="@color/vote"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_item_overview_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:maxLines="3"
                android:text="@string/overview_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_item_release_date_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/release_date"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="10dp"
                android:layout_toEndOf="@id/img_poster_movie"
                android:layout_toRightOf="@id/img_poster_movie"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_favorite"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/favorite" />

                <Button
                    android:id="@+id/btn_share"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>